--- a/image_retrieval.ipynb
+++ b/image_retrieval.ipynb
@@ -336,18 +336,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Document Collection Computed in 4.8241s\n"
+      "Document Collection Loaded in 0.1953s\n"
      ]
     }
    ],
    "source": [
-    "recompute_all = True\n",
-    "#seed for random number\n",
-    "seed = 1\n",
     "doc_list = getDocumentList(collection_path)\n",
     "\n",
     "#Compute or read document collection\n",
-    "compute_document_collection = False or recompute_all\n",
+    "compute_document_collection = False\n",
     "\n",
     "#create a Document collection object\n",
     "document_collection = DocumentCollection(collection_path, doc_list)\n",
@@ -449,7 +446,7 @@
    "id": "85f8d93b",
    "metadata": {},
    "source": [
-    "<h2>Generate the VSM report for trec_eval</h2>"
+    "<h2>Istance of VSM tf-idf</h2>"
    ]
   },
   {
@@ -457,23 +454,9 @@
    "execution_count": 11,
    "id": "7af06cbf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'./simple_images/Alligators/Alligators_4.jpeg'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "vsm = VectorSpaceModel(document_collection)\n",
-    "query = 'alligator'\n",
-    "vsm.getQueryResult(query)[0].img_dir\n",
-    "#document_collection.docs['1'].img_dir"
+    "vsm = VectorSpaceModel(document_collection)"
    ]
   },
   {
@@ -517,7 +500,7 @@
    "id": "7310ba41",
    "metadata": {},
    "source": [
-    "<h2>Generate the BM25 report for trec_eval</h2>"
+    "<h2>Istance of BM25 </h2>"
    ]
   },
   {
@@ -525,21 +508,9 @@
    "execution_count": 13,
    "id": "9be4341a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'./simple_images/Alligators/Alligators_4.jpeg'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bm25 = BM25(document_collection)\n",
-    "vsm.getQueryResult(query)[0].img_dir"
+    "bm25 = BM25(document_collection)"
    ]
   },
   {
@@ -594,7 +565,7 @@
    "id": "011b575c",
    "metadata": {},
    "source": [
-    "<h2>Generate the BM25F report for trec_eval</h2>"
+    "<h2>Istance of BM25F</h2>"
    ]
   },
   {
@@ -602,21 +573,9 @@
    "execution_count": 15,
    "id": "a22a48c1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'./simple_images/Alligators/Alligators_4.jpeg'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bm25f = BM25F(document_collection, w_head=3, w_body=1)\n",
-    "bm25f.getQueryResult(query)[0].img_dir"
+    "bm25f = BM25F(document_collection, w_head=3, w_body=1)"
    ]
   },
   {
@@ -681,7 +640,7 @@
    "id": "089d7bf5",
    "metadata": {},
    "source": [
-    "<h2>Generate the ULM report for trec_eval</h2>"
+    "<h2>Instance of  ULM </h2>"
    ]
   },
   {
@@ -689,21 +648,9 @@
    "execution_count": 17,
    "id": "f4cb7e61",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'./simple_images/Alligators/Alligators_6.jpeg'"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ulm = UnigramLanguageModel(document_collection)\n",
-    "ulm.getQueryResult(query)[0].img_dir"
+    "ulm = UnigramLanguageModel(document_collection)"
    ]
   },
   {
@@ -735,111 +682,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://localhost:4449/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /?q=teachiing+and+learning&model=ULM HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/style.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_6.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_9.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_4.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_5.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_7.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_10.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_1.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_3.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_8.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:49] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_2.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /?q=teaching+and+learning&model=ULM HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/style.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_4.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_9.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_6.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_5.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_7.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_10.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_1.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_3.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_8.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:49:59] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_2.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:03] \"GET /?q=teaching+and+learning&model=BM25 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:03] \"GET /static/style.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_8.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_5.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_1.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_9.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_4.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_6.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_7.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_3.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_10.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:04] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_2.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:08] \"GET /?q=teaching&model=BM25 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:08] \"GET /static/style.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /?q=learning&model=BM25 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/style.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_8.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_6.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_5.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_7.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_3.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_10.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_1.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_2.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_9.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:13] \"GET /static/simple_images/Teaching_and_learning/Teaching%20and%20learning_4.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /?q=tattoos&model=BM25 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/style.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_6.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_4.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_10.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_3.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_1.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_2.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_9.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_5.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_7.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:50:38] \"GET /static/simple_images/Tattoos/Tattoos_8.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /?q=children&model=BM25 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/style.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_4.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_6.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_7.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_3.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_8.jpeg HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_9.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_2.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_5.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_10.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:52] \"GET /static/simple_images/Children_and_family/Children%20and%20family_1.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /?q=family&model=BM25 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/style.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_6.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_7.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_3.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_8.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_2.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_9.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_5.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_10.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_4.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:52:56] \"GET /static/simple_images/Children_and_family/Children%20and%20family_1.jpeg HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:19] \"GET /?q=Red+Cross&model=BM25 HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/style.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Red_Cross/Red%20Cross_10.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Robotics/Robotics_4.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Nutrition/Nutrition_1.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Red_Cross/Red%20Cross_7.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Red_Cross/Red%20Cross_3.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Shovels/Shovels_9.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Red_Cross/Red%20Cross_6.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Red_Cross/Red%20Cross_8.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Red_Cross/Red%20Cross_4.jpeg HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Mar/2022 15:53:20] \"GET /static/simple_images/Red_Cross/Red%20Cross_1.jpeg HTTP/1.1\" 200 -\n"
+      " * Running on http://localhost:4449/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
