other refinements notebooks

--- a/image_retrieval.ipynb
+++ b/image_retrieval.ipynb
@@ -682,7 +682,56 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://localhost:4449/ (Press CTRL+C to quit)\n"
+      " * Running on http://localhost:4449/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:04] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:05] \"GET /static/style.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:11] \"GET /?q=plane&model=VSM HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/style.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/simple_images/Carpentry/Carpentry_4.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/simple_images/Carpentry/Carpentry_2.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/simple_images/Carpentry/Carpentry_7.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/simple_images/Carpentry/Carpentry_8.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/simple_images/Law/Law_4.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/simple_images/Telephone/Telephone_8.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/simple_images/Wood/Wood_5.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/simple_images/Carpentry/Carpentry_3.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:12] \"GET /static/simple_images/Carpentry/Carpentry_1.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:17] \"GET /?q=telephone&model=VSM HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:17] \"GET /static/style.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:17] \"GET /static/simple_images/Exercise/Exercise_1.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:17] \"GET /static/simple_images/Law/Law_2.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:17] \"GET /static/simple_images/Telephone/Telephone_3.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:18] \"GET /static/simple_images/Telephone/Telephone_7.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:18] \"GET /static/simple_images/Telephone/Telephone_6.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:18] \"GET /static/simple_images/Logic/Logic_4.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:18] \"GET /static/simple_images/Telephone/Telephone_9.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:18] \"GET /static/simple_images/Telephone/Telephone_4.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:18] \"GET /static/simple_images/Women/Women_8.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:18] \"GET /static/simple_images/Nutrition/Nutrition_1.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:23] \"GET /?q=telephone&model=BM25 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/style.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Telephone/Telephone_3.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Exercise/Exercise_1.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Law/Law_2.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Nutrition/Nutrition_1.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Telephone/Telephone_7.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Telephone/Telephone_6.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Logic/Logic_4.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Women/Women_8.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Telephone/Telephone_9.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:24] \"GET /static/simple_images/Telephone/Telephone_4.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:27] \"GET /?q=telephone&model=ULM HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/style.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_2.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_10.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_5.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_1.jpeg HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_4.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_9.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_8.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_3.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_7.jpeg HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [11/Mar/2022 16:15:28] \"GET /static/simple_images/Telephone/Telephone_6.jpeg HTTP/1.1\" 304 -\n"
      ]
     }
    ],
